v3.5.1 (XXXX-XX-XX)
-------------------

* Abort a FailedLeader job when its _to_ server fails.

* Decreased unnecessary wait times for agency callbacks in case they were
  called earlier than expected by main thread.

* Make arangosh not close the connection after the user aborts an operation.
  This restores the same behavior as in previous versions of ArangoDB, which also
  left the connection open.


v3.5.0-rc.7 (2019-08-01)
------------------------

* Upgraded arangodb starter version to 0.14.12.


v3.5.0-rc.6 (2019-07-29)
------------------------

* Fixed issue #9459: Optimization rule remove-collect-variables does not KEEP all necessary data.

* Added gzip and encryption options to arangoimport and arangoexport.

* Added missing REST API route GET /_api/transaction for retrieving the list of
  currently ongoing transactions.

* Fixed issue #9558: RTRIM not working as expected.

* Added startup error for bad temporary directory setting.

  If the temporary directory (--temp.path) setting is identical to the database 
  directory (`--database.directory`) this can eventually lead to data loss, as 
  temporary files may be created inside the temporary directory, causing overwrites of 
  existing database files/directories with the same names.
  Additionally the temporary directory may be cleaned at some point, and this would lead 
  to an unintended cleanup of the database files/directories as well.
  Now, if the database directory and temporary directory are set to the same path, there 
  will be a startup warning about potential data loss (though in ArangoDB 3.4 allowing to 
  continue the startup - in 3.5 and higher we will abort the startup).

* Make TTL indexes behave like other indexes on creation.
    
  If a TTL index is already present on a collection, the previous behavior
  was to make subsequent calls to `ensureIndex` fail unconditionally with
  the error "there can only be one ttl index per collection".
    