@@ -106,9 +106,13 @@ class FollowerInfo {
   /// @brief Take over leadership for this shard.
   ///        Also inject information of a insync followers that we knew about
   ///        before a failover to this server has happened
+  ///        The second parameter may be nullptr. It is an additional list
+  ///        of declared to be insync followers. If it is nullptr the follower
+  ///        list is initialised empty.
   ////////////////////////////////////////////////////////////////////////////////
 
-  void takeOverLeadership(std::vector<std::string> const& previousInsyncFollowers);
+  void takeOverLeadership(std::vector<ServerID> const& previousInsyncFollowers,
+                          std::shared_ptr<std::vector<ServerID>> realInsyncFollowers);
 
   //////////////////////////////////////////////////////////////////////////////
   /// @brief add a follower to a shard, this is only done by the server side
