@@ -119,9 +119,9 @@ bool ResignShardLeadership::first() {
     // for now but we will not accept any replication operation from any
     // leader, until we have negotiated a deal with it. Then the actual
     // name of the leader will be set.
-    col->followers()->setTheLeader("LEADER_NOT_YET_KNOWN");  // resign
+    col->followers()->setTheLeader(LeaderNotYetKnownString);  // resign
     trx.abort(); // unlock
-    
+
     transaction::cluster::abortLeaderTransactionsOnShard(col->id());
 
   } catch (std::exception const& e) {
@@ -135,3 +135,5 @@ bool ResignShardLeadership::first() {
   notify();
   return false;
 }
+
+std::string const ResignShardLeadership::LeaderNotYetKnownString = "LEADER_NOT_YET_KNOWN";
